Fixed class newInstance deprecation